--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -2895,3 +2895,21 @@
     model: Lotus II
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; KYLIN40) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.181 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 88.0.4324.181
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: iPro
+    model: Kylin 40
+  os_family: Android
+  browser_family: Chrome
