--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7625,13 +7625,15 @@ iNew:
 
 # iPro
 iPro:
-  regex: '(?:Kylin[ _]5.[05]S?|Jade[78]s|Amber[67]S?|Amber5S_Pro|Phonenix50S|Zafiro)(?:[);/ ]|$)'
+  regex: '(?:Kylin[ _]5.[05]S?|KYLIN40|Jade[78]s|Amber[67]S?|Amber5S_Pro|Phonenix50S|Zafiro)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Kylin_5.0S'
       model: 'Kylin 5.0S'
     - regex: 'Kylin (5.[05])'
       model: 'Kylin $1'
+    - regex: 'KYLIN40'
+      model: 'Kylin 40'
     - regex: 'Jade([78])s'
       model: 'Jade $1s'
     - regex: 'Amber7S'
