--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6894,3 +6894,212 @@
     model: ""
   os_family: Windows
   browser_family: Unknown
+-
+  user_agent: Microsoft Office Excel/16.42.1011 (Mac OS/10.13.6; Desktop; es-MX; NonAppStore; Apple/Macmini7,1)
+  os:
+    name: Mac
+    version: 10.13.6
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Excel
+    version: 16.42.1011
+  device:
+    type: desktop
+    brand: Apple
+    model: Mac Mini (2014)
+  os_family: Mac
+  browser_family: Unknown
+-
+  user_agent: Microsoft Office Excel/16.43.1108 (Mac OS/10.13.6; Desktop; es-MX; NonAppStore; Apple/MacBook7,1)
+  os:
+    name: Mac
+    version: 10.13.6
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Excel
+    version: 16.43.1108
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook 13" (2010)
+  os_family: Mac
+  browser_family: Unknown
+-
+  user_agent: Microsoft Office Excel/16.43.1108 (Mac OS/10.13.6; Desktop; es-MX; NonAppStore; Apple/MacPro5,1)
+  os:
+    name: Mac
+    version: 10.13.6
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Excel
+    version: 16.43.1108
+  device:
+    type: desktop
+    brand: Apple
+    model: Mac Pro (2010-2012)
+  os_family: Mac
+  browser_family: Unknown
+-
+  user_agent: Microsoft Office Excel/16.43.1108 (Mac OS/10.13.6; Desktop; es-MX; NonAppStore; Apple/iMac12,1)
+  os:
+    name: Mac
+    version: 10.13.6
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Excel
+    version: 16.43.1108
+  device:
+    type: desktop
+    brand: Apple
+    model: iMac 21.5" (2011)
+  os_family: Mac
+  browser_family: Unknown
+-
+  user_agent: Microsoft Office Excel/16.44.1213 (Mac OS/11.1; Desktop; es-MX; AppStore; Apple/iMac19,2)
+  os:
+    name: Mac
+    version: "11.1"
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Excel
+    version: 16.44.1213
+  device:
+    type: desktop
+    brand: Apple
+    model: iMac 21.5" (2019)
+  os_family: Mac
+  browser_family: Unknown
+-
+  user_agent: Microsoft Office Excel/16.46.212 (Mac OS/10.14.6; Desktop; es-MX; NonAppStore; Apple/iMac14,2)
+  os:
+    name: Mac
+    version: 10.14.6
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Excel
+    version: 16.46.212
+  device:
+    type: desktop
+    brand: Apple
+    model: iMac 27" (2013)
+  os_family: Mac
+  browser_family: Unknown
+-
+  user_agent: Microsoft Office Excel/16.46.212 (Mac OS/10.14.6; Desktop; es-MX; NonAppStore; Apple/iMac14,4)
+  os:
+    name: Mac
+    version: 10.14.6
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Excel
+    version: 16.46.212
+  device:
+    type: desktop
+    brand: Apple
+    model: iMac 21.5" (2014)
+  os_family: Mac
+  browser_family: Unknown
+-
+  user_agent: Microsoft Office Excel/16.46.212 (Mac OS/10.15.7; Desktop; es-ES; NonAppStore; Apple/iMac14,1)
+  os:
+    name: Mac
+    version: 10.15.7
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Excel
+    version: 16.46.212
+  device:
+    type: desktop
+    brand: Apple
+    model: iMac 21.5" (2013)
+  os_family: Mac
+  browser_family: Unknown
+-
+  user_agent: Microsoft Office Word/16.47.314 (Mac OS/10.14.6; Desktop; en-US; NonAppStore; Apple/MacBook8,1)
+  os:
+    name: Mac
+    version: 10.14.6
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 16.47.314
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook 12" (2015)
+  os_family: Mac
+  browser_family: Unknown
+-
+  user_agent: Microsoft Office OneNote/16.40/200810 (Mac OS/10.13.6; Desktop; es-MX; NonAppStore; Apple/iMac10,1)
+  os:
+    name: Mac
+    version: 10.13.6
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office OneNote
+    version: "16.40"
+  device:
+    type: desktop
+    brand: Apple
+    model: iMac (2009)
+  os_family: Mac
+  browser_family: Unknown
+-
+  user_agent: Microsoft Office OneNote/16.0.13801.20288 (Windows/10.0; Desktop x64; es-MX; Desktop app; LENOVO/81W8)
+  os:
+    name: Windows
+    version: "10.0"
+    platform: x64
+  client:
+    type: mobile app
+    name: Microsoft Office OneNote
+    version: 16.0.13801.20288
+  device:
+    type: desktop
+    brand: Lenovo
+    model: IdeaPad S145-15IIL
+  os_family: Windows
+  browser_family: Unknown
+-
+  user_agent: Microsoft Office OneNote/16.0.13801.20288 (Windows/10.0; Desktop x64; en-US; Desktop app; LENOVO/81SS)
+  os:
+    name: Windows
+    version: "10.0"
+    platform: x64
+  client:
+    type: mobile app
+    name: Microsoft Office OneNote
+    version: 16.0.13801.20288
+  device:
+    type: desktop
+    brand: Lenovo
+    model: Flex 14API 81SS
+  os_family: Windows
+  browser_family: Unknown
+-
+  user_agent: Microsoft Office OneNote/16.0.13801.20288 (Windows/10.0; Desktop x64; es-MX; Desktop app; LENOVO/81MV)
+  os:
+    name: Windows
+    version: "10.0"
+    platform: x64
+  client:
+    type: mobile app
+    name: Microsoft Office OneNote
+    version: 16.0.13801.20288
+  device:
+    type: desktop
+    brand: Lenovo
+    model: IdeaPad S145-15IWL
+  os_family: Windows
+  browser_family: Unknown
+
