--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -593,6 +593,34 @@ Apple:
       model: 'Watch Series $1 44mm'
 
       # specific desktop devices
+    - regex: '(?:.+_)?MacBook7(?:%2C|,)1'
+      device: 'desktop'
+      model: 'MacBook 13" (2010)'
+    - regex: '(?:.+_)?MacPro5(?:%2C|,)1'
+      device: 'desktop'
+      model: 'Mac Pro (2010-2012)'
+    - regex: '(?:.+_)?iMac12(?:%2C|,)1'
+      device: 'desktop'
+      model: 'iMac 21.5" (2011)'
+    - regex: '(?:.+_)?iMac19(?:%2C|,)2'
+      device: 'desktop'
+      model: 'iMac 21.5" (2019)'
+    - regex: '(?:.+_)?iMac14(?:%2C|,)2'
+      device: 'desktop'
+      model: 'iMac 27" (2013)'
+    - regex: '(?:.+_)?iMac14(?:%2C|,)4'
+      device: 'desktop'
+      model: 'iMac 21.5" (2014)'
+    - regex: '(?:.+_)?iMac14(?:%2C|,)1'
+      device: 'desktop'
+      model: 'iMac 21.5" (2013)'
+    - regex: '(?:.+_)?MacBook8(?:%2C|,)1'
+      device: 'desktop'
+      model: 'MacBook 12" (2015)'
+    - regex: '(?:.+_)?iMac10(?:%2C|,)1'
+      device: 'desktop'
+      model: 'iMac (2009)'
+
     - regex: '(?:.+_)?MacBookAir2(?:%2C|,)1'
       device: 'desktop'
       model: 'MacBook Air (2009)'
@@ -743,6 +771,9 @@ Apple:
     - regex: '(?:.+_)?Macmini8(?:%2C|,)1'
       device: 'desktop'
       model: 'Mac Mini (2018)'
+    - regex: '(?:.+_)?Macmini7(?:%2C|,)1'
+      device: 'desktop'
+      model: 'Mac Mini (2014)'
 
     # specific smartphone devices
     - regex: '(?:Apple-|.+_)?iPh(?:one)?1[C,_]1'
@@ -9094,6 +9125,17 @@ Lenovo:
     - regex: 'VR-1541F'  # VR headset
       device: 'wearable'
       model: 'Mirage Solo'
+
+    - regex: 'LENOVO/81W8(?:[);/ ]|$)'
+      device: 'desktop'
+      model: 'IdeaPad S145-15IIL'
+    - regex: 'LENOVO/81MV(?:[);/ ]|$)'
+      device: 'desktop'
+      model: 'IdeaPad S145-15IWL'
+    - regex: 'LENOVO/81SS(?:[);/ ]|$)'
+      device: 'desktop'
+      model: 'Flex 14API 81SS'
+
 
     - regex: 'Lenovo TAB ?([^/;]*) Build'
       model: 'TAB $1'
