--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1977,11 +1977,13 @@
   user_agent: Opera/9.80 (iOS; Opera Mini/7.0.73345/28.2555; U; ru) Presto/2.10.229 Version/11.62
   os:
     name: iOS
+    short_name: IOS
     version: ""
     platform: ""
 -
   user_agent: Opera/9.80 (Android; Opera Mini/7.5.54678/28.2555; U; ru) Presto/2.10.289 Version/12.02
   os:
     name: Android
+    short_name: AND
     version: ""
     platform: ""
