--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -633,7 +633,7 @@
   name: 'iOS'
   version: '$1'
 
-- regex: '(?:Podcasts/(?:[\d\.]+)|Instacast(?:HD)?/(?:\d\.[\d\.abc]+)|Pocket Casts, iOS|iOS;|\(iOS\)|Overcast|Castro|Podcat|iCatcher|RSSRadio/|MobileSafari/)(?!.*x86_64)'
+- regex: '(?:Podcasts/(?:[\d\.]+)|Instacast(?:HD)?/(?:\d\.[\d\.abc]+)|Pocket Casts, iOS|\(iOS\)|Overcast|Castro|Podcat|iCatcher|RSSRadio/|MobileSafari/)(?!.*x86_64)'
   name: 'iOS'
   version: ''
 
@@ -646,6 +646,10 @@
   version: '$1'
 
 - regex: 'Sonos/.+\(ICRU_'
+  name: 'iOS'
+  version: ''
+
+- regex: 'iOS; (?!\d+)'
   name: 'iOS'
   version: ''
 
