--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -3039,3 +3039,56 @@
     model: Roni
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; Hyundai_Eternity_G57L) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.141 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 88.0.4324.141
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Hyundai
+    model: Eternity G57L
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 10; moto g(8) power lite Build/QOD30.163-7)
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Motorola
+    model: Moto G8 Power Lite
+  os_family: Android
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 11; T790Y Build/RKQ1.201004.002)
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: TCL
+    model: 10 5G
+  os_family: Android
+  browser_family: Android Browser
