--- a/regexes/alias_devices.yml
+++ b/regexes/alias_devices.yml
@@ -1,9 +1,3 @@
-# AppleWebKit
-- regex: 'Android (?:[\d\.]+;)\s?(?:[^;]+;)?\s?(.+) Build/(?:.+)\) AppleWebKit'
-  name: '$1'
-
-- regex: 'Android (?:[\d.]+;)\s?(?:[^;]+;)?\s?(.+)\) AppleWebKit'
-  name: '$1'
 
 # Dalvik
 - regex: '^Dalvik/[\d\.]+ \(Linux; U;\s?Android\s?(?:[\d\.]+;)\s?(.+) (?:Build|MIUI)/(?:.+)\)'
@@ -14,10 +8,50 @@
   name: '$1'
 
 # UCWEB
-- regex: 'Adr [\d\.]+; (?:[a-z]{2}(?:-[a-z]{2})?;)\s(.+)\) U2/(?:[\d\.]+) UCBrowser'
+- regex: 'Adr [\d\.]+;\s+(?:[a-z]{2}(?:[_-][a-z]{2})?;)\s(.+)\)\s+U2/(?:[\d\.]+) UCBrowser'
+  name: '$1'
+- regex: '^JUC\s?\(Linux;\s?U;\s?(?:[\d\.]+;)\s?(?:[a-z]{2}(?:[_-][a-z]{2});)\s?([^;]+);\s?\d+\*\d+;?\)\s?UCWEB'
   name: '$1'
 
-- regex: '^JUC\s?\(Linux;\s?U;\s?(?:[\d\.]+;)\s?(?:[a-z]{2}(?:[_-][a-z]{2});)\s?([^;]+);\s?\d+\*\d+;?\)\s?UCWEB'
+# WhatsApp
+- regex: 'WhatsApp/.+ Device/(?:[^-]+)-(.+)$'
+  name: '$1'
+- regex: 'WhatsApp/.+ Device/(.+)$'
+  name: '$1'
+
+# Facebook apple
+- regex: 'like Mac.+FBDV/([^;]+);'
+  name: '$1'
+# Facebook
+- regex: 'FBMD/([^;]+);'
+  name: '$1'
+
+# Instagram
+- regex: 'Instagram (?:[\d.]+)\s+\(([^;]+);'
+  name: '$1'
+
+# CFNetwork apple
+- regex: 'CFNetwork/.+Darwin/.+(?:\(x86_64\))?\s+\(([^)]+)\)$'
+  name: '$1'
+
+# Android AppleWebKit
+- regex: 'Android\s+(?:[^;]+);\s+(?:[a-z]{2}(?:[_-][a-z]{2})?;)\s+([^;]+); Android/'
+  name: '$1'
+- regex: 'Android (?:[\d\.]+;)\s?(?:[^;]+;)?\s?(.+) Build/.+AppleWebKit'
+  name: '$1'
+- regex: 'Android (?:[\d\.]+;)\s?(?:[a-z]{2}(?:[_-][a-z]{2})?;)?\s?([^;]+);? Build/'
+  name: '$1'
+- regex: 'Android (?:[\d.]+;)\s?(?:[^;]+;)?\s?(.+)\) AppleWebKit'
+  name: '$1'
+- regex: 'Android (?:[\d.]+;)\s?(?:[^;]+;)?\s?(.+) AppleWebKit'
+  name: '$1'
+
+# BlackBerry
+- regex: 'BlackBerry;\s+U;\s+([^;]+);\s+(?:[a-z]{2}(?:[_-][a-z]{2})?;)?'
+  name: '$1'
+
+# UnityPlayer
+- regex: 'Android OS.+;\s+([^;]+);?\) AppleWebKit/.+UnityPlayer'
   name: '$1'
 
 # Obigo Browser
