--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -5119,4 +5119,21 @@
     model: MI 4i
   os_family: Android
   browser_family: Unknown
-
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; NOP-AN00) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.198 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 86.0.4240.198
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Huawei
+    model: Mate 40 Pro+
+  os_family: Android
+  browser_family: Chrome
