--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -4319,3 +4319,21 @@
     model: 3T 10
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; 9029Z Build/PPR1.180610.011; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/87.0.4280.141 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 87.0.4280.141
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Alcatel
+    model: Joy Tab
+  os_family: Android
+  browser_family: Chrome
