--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -7620,3 +7620,39 @@
     model: View 2 Plus
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.0.4; Beeline E600 Build/IMM76D) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/42.0.2311.111 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 4.0.4
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 42.0.2311.111
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Beeline
+    model: E600
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: UCWEB/2.0 (MIDP-2.0; U; Adr 5.1; ru; Beeline_Smart_6) U2/1.0.0 UCBrowser/10.7.9.856 U2/1.0.0 Mobile
+  os:
+    name: Android
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 10.7.9.856
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Beeline
+    model: Smart 6
+  os_family: Android
+  browser_family: Unknown
