--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1939,6 +1939,13 @@
     version: "15.11"
     platform: x64
 -
+  user_agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) dvkbuntu-easy-menu/1.0.0 Chrome/83.0.4103.64 Electron/9.0.0 Safari/537.36
+  os:
+    name: DVKBuntu
+    short_name: DVK
+    version: ""
+    platform: x64
+-
   user_agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.12) Gecko/20080208 PCLinuxOS/2.0.0.12-1pclos2007 (2007) Firefox/2.0.0.12
   os:
     name: PCLinuxOS
