--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -224,6 +224,10 @@
 ##########
 # Linux
 ##########
+# DVKBuntu (https://www.dvkbuntu.org/)
+- regex: 'dvkbuntu'
+  name: 'DVKBuntu'
+  version: ''
 
 # Lumin OS (https://developer.magicleap.com/en-us/learn/guides/lumin-os-release-notes-summary)
 - regex: 'Helio/(\d+[\.\d]+)'
